# blogator

./: .ghc.environment.x86_64-linux-9.2.7  CHANGELOG.md  LICENSE  blogator.cabal
app/: Main.hs
src/: Blogator.hs
src/Blogator/: ColorScheme.hs  Html.hs  Options.hs  Run.hs
src/Blogator/Anatomy/: Index.hs  OutputDirectory.hs  Posts.hs
src/Blogator/Data/: Date.hs  Env.hs  Post.hs
src/Blogator/Effect/: FileSystem.hs
src/Web/: Blogator.hs
src/Web/Blogator/: Html.hs  Parse.hs  Run.hs  Types.hs
