cabal-version:      2.4
name:               blogator
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Mahdi Seyedan
maintainer:         mahdi.se@yahoo.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Web.Blogator
                    , Web.Blogator.Parse
                    , Web.Blogator.Types
                    , Web.Blogator.Html
                    , Web.Blogator.Run

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , time
                    , text
                    , bytestring
                    , directory
                    , filepath
                    , shelly
                    , blaze-html
                    , highlighting-kate
                    , cheapskate
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:  OverloadedStrings
                       , LambdaCase
                       , ViewPatterns
                       , ScopedTypeVariables
                       , RecordWildCards
                       , NamedFieldPuns
                       , TupleSections
                       , DeriveFunctor
                       , DeriveGeneric
                       , EmptyDataDecls


executable blogator
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        blogator

    hs-source-dirs:   app
    default-language: Haskell2010
