cabal-version:      2.4
name:               blogator
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Mahdi Seyedan
maintainer:         mahdi.se@yahoo.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Blogator
                    , Blogator.Data.Post
                    , Blogator.Data.Date
                    , Blogator.Data.Env
                    , Blogator.Effect.FileSystem
                    , Blogator.Options
                    , Blogator.Anatomy.Posts
                    , Blogator.Anatomy.Index
                    , Blogator.Anatomy.OutputDirectory
                    , Blogator.Html
                    , Blogator.Run
                    , Blogator.ColorScheme
    build-depends:    base
                    , time
                    , text
                    , bytestring
                    , containers
                    , directory
                    , filepath
                    , shelly
                    , blaze-html
                    , blaze-markup
                    , cheapskate
                    , polysemy
                    , polysemy-plugin
                    , process
                    , optparse-generic
                    , skylighting-core
                    , skylighting
                    , skylighting-format-blaze-html
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -fplugin=Polysemy.Plugin
    default-extensions:  OverloadedStrings
                       , LambdaCase
                       , ViewPatterns
                       , ScopedTypeVariables
                       , RecordWildCards
                       , NamedFieldPuns
                       , TupleSections
                       , DeriveFunctor
                       , DeriveGeneric
                       , DeriveAnyClass
                       , DerivingStrategies
                       , GeneralizedNewtypeDeriving
                       , EmptyDataDecls
                       , DataKinds
                       , FlexibleContexts
                       , GADTs
                       , PolyKinds
                       , RankNTypes
                       , TypeApplications
                       , TypeOperators
                       , TypeFamilies


executable blogator
    main-is:          Main.hs
    build-depends:
        base,
        blogator
    hs-source-dirs:   app
    default-language: Haskell2010
